# vibtools

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
assets/: metadata.f90
config/: CMakeLists.txt  config.cmake.in
example/: dipgrad  numhess  pyirtools.ipynb  struc.xyz  thermo.ipynb  vibspectrum.ref
include/: irtools.h  vibtools.h
mace/: environment.yml  evaluate.py  macemuscript.py  macescript.py
plot/: irplot.py
python/pyirtools/: __init__.py  app.py  calculator.py  filetypes.py  printouts.py  readers.py
python/pyvibtools/: __init__.py  app.py  calculator.py  filetypes.py  multiplot.py  printouts.py  readers.py  utils.py
src/: CMakeLists.txt  C_interface.F90  atmasses.f90  atsymbols.f90  axis_module.f90  convert.f90  core.f90  io_mod.f90  main.f90  maths.f90  plot.f90  pyirtools.cpp  pyvibtools.cpp  statmech.f90  thermo.f90
